# yara-sigma-webui

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  __init__.py  __main__.py  app.py  cli.py  docker-compose.yml  index.html  ioc.py  pyproject.toml  requirements.txt  sigma.py  sysmon.yaml  updated_README_version1.md  winsec.yaml  yara.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
mappings/pipelines/: sysmon.yaml  winsec.yaml
samples/: malware.yar
static/: index.html
templates/: index.html
tests/: test_convert.py
yar2sig/: __init__.py  backends.py  cli.py  emitter.py  ioc.py  parser.py
yar2sig/mappings/: linux.yaml  proxy.yaml  sysmon.yaml  winsec.yaml
