[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "yar2sig"
version = "3.0.0"
description = "Convert YARA rules to Sigma rules and native SIEM/EDR queries"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Wahid Hendrawan"}]
keywords = ["yara", "sigma", "siem", "edr", "detection-engineering", "yara-to-sigma", "conversion"]
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
web = ["Flask>=3.0"]
dev = ["pytest>=7.0"]
prod = ["gunicorn>=23.0"]
native = [
    "sigma-cli>=1.0",
    "pysigma-backend-elasticsearch>=1.1",
    "pysigma-backend-splunk>=1.1",
    "pysigma-backend-qradar-aql>=0.3",
]
full = [
    "Flask>=3.0",
    "gunicorn>=23.0",
    "sigma-cli>=1.0",
    "pysigma-backend-elasticsearch>=1.1",
    "pysigma-backend-splunk>=1.1",
    "pysigma-backend-qradar-aql>=0.3",
]

[project.scripts]
yar2sig = "yar2sig.cli:main"

[project.urls]
Homepage = "https://github.com/wahidhendrawan/yara-sigma-webui"

[tool.setuptools]
packages = ["yar2sig"]

[tool.setuptools.package-data]
yar2sig = ["mappings/*.yaml"]
